--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -1,3 +1,6 @@
+$bg-color-1: #e2dfe0;
+$bg-color-2: #dce0e0;
+$bg-color-3: #f7f5f1;
 $primary-color: rgb(56, 85, 100);
 $default-border-radius: 5%;
 $default-padding: 0.4rem;
