--- a/css/_technologies.scss
+++ b/css/_technologies.scss
@@ -2,7 +2,7 @@
 
 .technologies {
     grid-area: technologies;
-    background-color: #f9f9f9 !important;
+    background-color: $bg-color-3 !important;
 
     ul {
         list-style: none;
